@@ -1,3 +1,7 @@
+## 0.x.x / 2018-xx-xx
+
+* [ENHANCEMENT] (cli) Add short flags
+
 ## 0.4.0 / 2018-06-03
 
 * [ENHANCEMENT] (UI) Autoreload the job log UI when job has finished.
